// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("") 1`] = `
{
  "_tag": "Right",
  "right": {
    "method": "get",
    "url": {
      "path": "/todos",
      "query": {
        "updated_since": "",
      },
    },
  },
}
`;

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("2021-02-18T12:02:16.49") 1`] = `
{
  "_tag": "Left",
  "left": [
    {
      "code": "format",
      "message": "Request query parameter updated_since must match format "date-time"",
      "path": [
        "query",
        "updated_since",
      ],
      "severity": 0,
    },
  ],
}
`;

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("2021-02-18T12:02:16.49Z") 1`] = `
{
  "_tag": "Right",
  "right": {
    "method": "get",
    "url": {
      "path": "/todos",
      "query": {
        "updated_since": "2021-02-18T12:02:16.49Z",
      },
    },
  },
}
`;

exports[`HttpValidator validateInput() all validations are turned on properly validate date-time format ("yesterday") 1`] = `
{
  "_tag": "Left",
  "left": [
    {
      "code": "format",
      "message": "Request query parameter updated_since must match format "date-time"",
      "path": [
        "query",
        "updated_since",
      ],
      "severity": 0,
    },
  ],
}
`;

exports[`HttpValidator validateInput() all validations are turned on returns validation errors for whole request structure 1`] = `
{
  "_tag": "Left",
  "left": [
    {
      "code": "type",
      "message": "Request body property completed must be boolean",
      "path": [
        "body",
        "completed",
      ],
      "severity": 0,
    },
    {
      "code": "format",
      "message": "Request header parameter x-todos-publish must match format "date-time"",
      "path": [
        "header",
        "x-todos-publish",
      ],
      "severity": 0,
    },
    {
      "code": "pattern",
      "message": "Request query parameter overwrite must match pattern "^(yes|no)$"",
      "path": [
        "query",
        "overwrite",
      ],
      "severity": 0,
    },
  ],
}
`;

exports[`HttpValidator validateOutput() all validations are turned on returns validation errors for whole request structure 1`] = `
{
  "_tag": "Left",
  "left": [
    {
      "message": "The received media type "application/something" does not match the ones specified in the current response: application/json, application/xml",
      "severity": 0,
    },
    {
      "code": "type",
      "message": "Response body property completed must be boolean",
      "path": [
        "body",
        "completed",
      ],
      "severity": 0,
    },
    {
      "code": "format",
      "message": "Response header parameter x-todos-publish must match format "date-time"",
      "path": [
        "header",
        "x-todos-publish",
      ],
      "severity": 0,
    },
  ],
}
`;
